Подправлен стиль reformat code